# rust-yaml-enum-example

./: Cargo.toml
src/: main.rs
