[package]
name = "rust-yaml-enum-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
pretty_assertions = "1.4.0"
